a11y: fix color contrast by lightening the inactive tab text

--- a/apps/site/assets/css/_tabbed-nav.scss
+++ b/apps/site/assets/css/_tabbed-nav.scss
@@ -101,7 +101,7 @@
     }
 
     .m-tabbed-nav__icon-text {
-      color: $brand-primary-light-contrast;
+      color: $brand-primary-lightest;
       font-size: $font-size-base * 2;
       font-weight: bold;
       line-height: $headings-line-height;
